# 1.17.X-1.18.X(Fabric)
Issue #5 wanted to add support for 1.17

Made the mod work for 1.17.1-1.18.2 for Fabric, and 1.17.1 for Forge

Lot of changes due to API differences have resulted in changes to nearly all files and a comprehensive list would just list everything, so if you're interested you can look through things

This version is a backport of 6.2.4/6.2.3 to Minecraft 1.17 this includes
- Resourcepack
- Color
- Location
- And more